--- a/packages/gateway/composer.json
+++ b/packages/gateway/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.2.5",
+        "dusterio/lumen-passport": "^0.2.19",
         "guzzlehttp/guzzle": "^7.0",
-        "laravel/lumen-framework": "^7.0"
+        "laravel/lumen-framework": "^7.0",
+        "laravel/passport": "^9.3"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9.1",
