--- a/packages/gateway/.env.example
+++ b/packages/gateway/.env.example
@@ -19,4 +19,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
 AUTHORS_SERVICE_BASE_URL=
+AUTHORS_SERVICE_SECRET=
+
 BOOKS_SERVICE_BASE_URL=
+BOOKS_SERVICE_SECRET=
